[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Enemies/WitchEnemy/WitchEnemyCastLeft.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/WitchEnemy/WitchEnemyIdleLeft.png" type="Texture" id=2]
[ext_resource path="res://src/CollisionTemplates/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Enemies/EnemyStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Enemies/Witch/WitchEnemy.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Cast",
"speed": 15.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20.646, 31.7492 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20.646, 31.749 )

[node name="WitchEnemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32.6135 )
frames = SubResource( 6 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.80525, -32.3445 )
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -3.805, -32.345 )
shape = SubResource( 8 )

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="HurtBox"]
